DunningNotification/src/objects/DunningPhaseDef__c.object
<CustomObject>
    <fields>
        <fullName>Days__c</fullName>
        <description>How many days after the invoice is past-due should the notification be triggered</description>
        <inlineHelpText>How many days after the invoice is past-due should the notification be triggered</inlineHelpText>
        <label>Trigger After # of Days Past-Due</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DunningDef__c</fullName>
        <label>Dunning Notification</label>
        <referenceTo>Dunning_Notification_Definition__c</referenceTo>
        <relationshipLabel>Phases</relationshipLabel>
        <relationshipName>DunningPhases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email_Template_Name__c</fullName>
        <description>The email template name (stored in Static Resources).  If not specified, the default email template will be used.</description>
        <inlineHelpText>The email template name (stored in Static Resources).  If not specified, the default email template will be used.</inlineHelpText>
        <label>Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <description>The phase number</description>
        <inlineHelpText>The phase number</inlineHelpText>
        <label>Phase</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>The email subject for the current phase.  If not specified, the default email subject will be used.</description>
        <inlineHelpText>The email subject for the current phase.  If not specified, the default email subject will be used.</inlineHelpText>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Dunning Notification Phase</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dunning Notification Phases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>